# Mixed-Radix-Fast-Fourier-Transform

./: .gitignore  CMakeLists.txt  README.md  convolve.c  highspeedFFT.c  highspeedFFT.h  real.c  real.h
src/: CMakeLists.txt  convolve.c  highspeedFFT.h  real.c  real.h
test/: CMakeLists.txt  test_mixedRadixFFT.cpp
